| Summary: | ASTERISK-27752: Ten seconds of silence after mp3 playback | ||||
| Reporter: | Sam Wierema (samwierema) | Labels: | |||
| Date Opened: | 2018-03-20 10:45:45 | Date Closed: | 2018-06-18 07:34:55 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Applications/app_mp3 | ||
| Versions: | 14.7.6 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | After playing a mp3 using MP3Player() approximately ten seconds of silence is observed before moving on in the dial plan. The MP3 is successfully played.
This behavior also occurs if the mp3 url target does not exist(404) so it is easy to reproduce by pointing to a non-existent url. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2018-03-20 10:45:46.141-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Sam Wierema (samwierema) 2018-03-20 11:17:56.929-0500 Note that we've created a patch for this, but are waiting on approval to commit it to Gerrit. By: Joshua C. Colp (jcolp) 2018-03-26 09:47:13.121-0500 Assigning to you and putting into waiting for feedback pending patch. By: Asterisk Team (asteriskteam) 2018-04-09 12:00:01.583-0500 Suspended due to lack of activity. This issue will be automatically re-opened if the reporter posts a comment. If you are not the reporter and would like this re-opened please create a new issue instead. If the new issue is related to this one a link will be created during the triage process. Further information on issue tracker usage can be found in the Asterisk Issue Guidlines [1]. [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines By: Sam Wierema (samwierema) 2018-06-12 09:32:40.869-0500 I've just submitted two patches, one against 14 and one against master. Looking forward to feedback! By: Asterisk Team (asteriskteam) 2018-06-12 09:32:41.195-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Friendly Automation (friendly-automation) 2018-06-18 07:34:57.837-0500 Change 9190 merged by Jenkins2: app_mp3: remove 10 seconds of silence after mp3 playback [https://gerrit.asterisk.org/9190|https://gerrit.asterisk.org/9190] By: Friendly Automation (friendly-automation) 2018-06-18 07:40:16.884-0500 Change 9189 merged by Joshua Colp: app_mp3: remove 10 seconds of silence after mp3 playback [https://gerrit.asterisk.org/9189|https://gerrit.asterisk.org/9189] By: Friendly Automation (friendly-automation) 2018-06-18 07:44:19.167-0500 Change 9179 merged by Jenkins2: app_mp3: remove 10 seconds of silence after mp3 playback [https://gerrit.asterisk.org/9179|https://gerrit.asterisk.org/9179] | ||||